--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/brands.min.css" integrity="sha512-DJLNx+VLY4aEiEQFjiawXaiceujj5GA7lIY8CHCIGQCBPfsEG0nGz1edb4Jvw1LR7q031zS5PpPqFuPA8ihlRA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
+        integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+        integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <div class="container-fluid bg-success" style="height: 10vh">
-        navbar
+    <nav class="navbar navbar-expand bg-body-tertiary px-3" style="height: 7vh;">
+        <a class="navbar-brand" href="#">
+            <img src="img/logo.svg" alt="">
+        </a>
+        <input class="form-control me-2 " type=" search" placeholder="Prova a cercare Lezioni di Laravel"
+            aria-label="Search">
+        <div class="d-flex gap-3">
+            <i class="d-none d-sm-inline fa-solid fa-list-ul"></i>
+            <i class="d-none d-sm-inline fa-solid fa-circle-question"></i>
+            <i class="d-none d-sm-inline fa-solid fa-ellipsis-vertical"></i>
+            <i class="fa-solid fa-bell" style="color: #ff8c00;"></i>
+        </div>
+    </nav>
+
+
+
+    <div class="col-lg-1 bg-primary position-fixed" style="height: 93vh;">
+        sidbar
     </div>
 
-    <div class="container position-fixed bg-primary col-1" style="height: 90vh;">
-        sidebar
-    </div>
-
-    <div class="container position-fixed bg-danger col-11 offset-1 mb-10" style="height: 15vh;">
-        Boolean
-    </div>
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-7 bg-secondary ">col</div>
-            <div class="col-4 bg-info">col</div>
+            <div class="col-12 bg-info" style="height: 10vh;">
+                Boolean
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-7  offset-1 bg-success">
+                col
+            </div>
+            <div class="col-lg-4 bg-secondary">
+                col
+            </div>
         </div>
     </div>
 
 
-    
- 
 
 
-   
+
+
+
 </body>
+
 </html>
