--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 
-    <div class="col-lg-1 bg-primary position-fixed" style="height: 93vh;">
+    <div class="col-lg-1 bg-primary position-absolute" style="height: 93vh;">
         sidbar
     </div>
 
