--- a/index.html
+++ b/index.html
@@ -41,28 +41,30 @@
     </nav>
 
 
+    <div class="container-fluid d-flex bg-danger p-0" style="height: 93vh; width: 100vw;">
+        
+        <div class="bg-primary " style="height: 93vh; width: 10rem;">
+            sidbar
+        </div>
+        
 
-    <div class="col-lg-1 bg-primary position-absolute" style="height: 93vh;">
-        sidbar
-    </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 bg-info">
+                    Boolean
+                </div>
+            </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 bg-info" style="height: 10vh;">
-                Boolean
+            <div class="row">
+                <div class="col-lg-8 bg-success">
+                    col
+                </div>
+                <div class="col-lg-4 bg-secondary">
+                    col
+                </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-lg-7  offset-1 bg-success">
-                col
-            </div>
-            <div class="col-lg-4 bg-secondary">
-                col
-            </div>
-        </div>
     </div>
-
 
 
 
