--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -42,25 +42,240 @@
 
 
     <div class="container-fluid d-flex bg-danger p-0" style="height: 93vh; width: 100vw;">
-        
-        <div class="bg-primary " style="height: 93vh; width: 10rem;">
-            sidbar
-        </div>
-        
 
-        <div class="container-fluid">
+        <div class="my_sidebar bg-dark"
+            style="color: white; height: 93vh; width: 12rem; background-image: url(img/sidebar-bg.png);">
+            <ul>
+                <li><i class="fa-solid fa-house"></i><a href="link"> Home</a></li>
+                <li><i class="fa-sharp fa-solid fa-chart-simple"></i><a href="link"> Stats</a></li>
+                <li><i class="fa-solid fa-signal"></i><a href="link"> Signals</a></li>
+            </ul>
+        </div>
+
+        <!--------------------Container Boolean-------------------->
+
+        <div class="container-fluid my_main">
             <div class="row">
-                <div class="col-12 bg-info">
-                    Boolean
+                <div class="col-12 bg-primary pt-2" style="color: white;">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h2>Boolean</h2>
+                            <button type="button" class="btn btn-info"
+                                style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .50rem;">
+                                Piano Blaze
+                            </button>
+                        </div>
+                        <div class="col-lg-4">
+                            <p>Studenti online negli ultimi 30 minuti</p>
+                        </div>
+                        <div class="col-lg-2">
+                            <p>Nuovo studente <i class="fa-regular fa-square-plus"></i></p>
+                        </div>
+                        <div class="col-lg-6">
+                            <button type="button" class="btn btn-info"
+                                style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .50rem;">
+                                3 App
+                            </button>
+                            <i class="fa-solid fa-angles-right"></i>
+                            <button type="button" class="btn btn-info"
+                                style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .50rem;">
+                                Boolean mobile app
+                            </button>
+                            <button type="button" class="btn btn-info"
+                                style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .50rem;">
+                                Boolean web app
+                            </button>
+                            <button type="button" class="btn btn-info"
+                                style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .50rem;">
+                                Boolean blog app
+                            </button>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <p>125</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!-------------------------------Main------------------------>
 
             <div class="row">
-                <div class="col-lg-8 bg-success">
-                    col
+                <div class="col-lg-8 col-sm-12 bg-success">
+                    <div class="row p-3">
+                        <div class="col-lg-12 mb-4">
+                            <div class="card rounded-0 bg-body-secondary">
+                                <div class="card-body">
+                                    <h3>Prossime Classi</h3>
+                                </div>
+                            </div>
+                            <table class="table border border-top-0">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">First</th>
+                                        <th scope="col">Last</th>
+                                        <th scope="col">Handle</th>
+                                        <th scope="col">Handle</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td colspan="2">Larry the Bird</td>
+                                        <td>@twitter</td>
+                                        <td>@twitter</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="card rounded-0 bg-body-secondary">
+                                <div class="card-body">
+                                    <h3>F.A.Q.</h3>
+                                </div>
+                            </div>
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                            aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Come aggiungere un nuovo utente?
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Clicca sul + in alto nella sezione blu."
+
+
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                                aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                Come posso accedere alle informazioni del mio account?
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Clicca sull'icona della campanella
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                                aria-expanded="false" aria-controls="flush-collapseThree">
+                                                posso usare questa dashboard da mobile?
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the
+                                                third item's accordion body. Nothing more exciting happening here in
+                                                terms
+                                                of content, but just filling up the space to make it look, at least at
+                                                first
+                                                glance, a bit more representative of how this would look in a real-world
+                                                application.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 bg-secondary">
-                    col
+                <div class="col-lg-4 col-sm-12 p-3 bg-secondary">
+                    <div class="card rounded-0 bg-body-secondary">
+                        <div class="card-body">
+                            <h3>Todo</h3>
+                        </div>
+                    </div>
+                    <div class="col-12 p-2 bg-white">
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"
+                                        checked>
+                                    <label class="form-check-label" for="flexCheckChecked">
+                                        Kickoff nuove classi
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"
+                                        checked>
+                                    <label class="form-check-label" for="flexCheckChecked">
+                                        Lezione su Bootstrap in classe #75
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"
+                                        checked>
+                                    <label class="form-check-label" for="flexCheckChecked">
+                                        controllare usarname github studenti
+                                    </label>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
